--- a/create-your-plan.html
+++ b/create-your-plan.html
@@ -131,7 +131,9 @@
                         </div>
                         <div class="separator"></div>
 
-                        <div class="question-map">
+                        <div
+                            class="question-map"
+                        >
                             <h2>03</h2>
                             <h3>Quantity</h3>
                         </div>
