--- a/create-your-plan.html
+++ b/create-your-plan.html
@@ -17,18 +17,52 @@
         <div class="container">
             <section class="header">
                 <div class="navbar">
-                    <img
-                        src="./assets/shared/desktop/logo.svg"
-                        alt=""
-                    />
-                    <div class="navbar-options">
-                        <a href="./home.html">HOME</a>
-                        <a href="./about-us.html"
-                            >ABOUT US</a
+                    <div class="main-navbar">
+                        <img
+                            src="./assets/shared/desktop/logo.svg"
+                            alt=""
+                        />
+                        <div class="navbar-options">
+                            <a href="./home.html">HOME</a>
+                            <a href="./about-us.html"
+                                >ABOUT US</a
+                            >
+                            <a
+                                href="./create-your-plan.html"
+                                >CREATE YOUR PLAN</a
+                            >
+                        </div>
+                        <div
+                            class="hamburger"
+                            id="hamburger"
                         >
-                        <a href="./create-your-plan.html"
-                            >CREATE YOUR PLAN</a
-                        >
+                            <img
+                                id="hamburger-icon"
+                                src="./assets/shared/mobile/icon-hamburger.svg"
+                                alt=""
+                            />
+                        </div>
+                    </div>
+
+                    <div class="modal-menu hidden">
+                        <ul>
+                            <li>
+                                <a href="./home.html"
+                                    >Home</a
+                                >
+                            </li>
+                            <li>
+                                <a href="./about-us.html"
+                                    >About Us</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="./create-your-plan.html"
+                                    >Create Your Plan</a
+                                >
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
@@ -131,9 +165,7 @@
                         </div>
                         <div class="separator"></div>
 
-                        <div
-                            class="question-map"
-                        >
+                        <div class="question-map">
                             <h2>03</h2>
                             <h3>Quantity</h3>
                         </div>
