--- a/pages/create.html
+++ b/pages/create.html
@@ -10,14 +10,19 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <title>Document</title>
-        <link rel="stylesheet" href="./css/style.css" />
+        <title>Coffeeroasters - Create my Plan</title>
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="../assets/favicon.png"
+        />
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
         <nav>
             <img
                 class="nav-logo"
-                src="./assets/shared/desktop/logo-header.svg"
+                src="../assets/shared/desktop/logo-header.svg"
                 alt="Coffeeroaster Logo"
             />
 
@@ -34,7 +39,7 @@
             <div class="hamburger" id="hamburger">
                 <img
                     id="hamburger-icon"
-                    src="./assets/shared/mobile/icon-hamburger.svg"
+                    src="../assets/shared/mobile/icon-hamburger.svg"
                     alt=""
                 />
             </div>
@@ -180,7 +185,7 @@
                             </h1>
                             <div class="arrow-wrap">
                                 <img
-                                    src="./assets/plan/desktop/icon-arrow.svg"
+                                    src="../assets/plan/desktop/icon-arrow.svg"
                                     alt=""
                                 />
                             </div>
@@ -223,7 +228,7 @@
                             <h1>What type of coffee?</h1>
                             <div class="arrow-wrap">
                                 <img
-                                    src="./assets/plan/desktop/icon-arrow.svg"
+                                    src="../assets/plan/desktop/icon-arrow.svg"
                                     alt=""
                                 />
                             </div>
@@ -266,7 +271,7 @@
                             </h1>
                             <div class="arrow-wrap">
                                 <img
-                                    src="./assets/plan/desktop/icon-arrow.svg"
+                                    src="../assets/plan/desktop/icon-arrow.svg"
                                     alt=""
                                 />
                             </div>
@@ -304,7 +309,7 @@
 
                             <div class="arrow-wrap">
                                 <img
-                                    src="./assets/plan/desktop/icon-arrow.svg"
+                                    src="../assets/plan/desktop/icon-arrow.svg"
                                     alt=""
                                 />
                             </div>
@@ -354,7 +359,7 @@
                             </h1>
                             <div class="arrow-wrap">
                                 <img
-                                    src="./assets/plan/desktop/icon-arrow.svg"
+                                    src="../assets/plan/desktop/icon-arrow.svg"
                                     alt=""
                                 />
                             </div>
@@ -452,7 +457,7 @@
         <footer>
             <img
                 class="footer-logo"
-                src="./assets/shared/desktop/logo-footer.svg"
+                src="../assets/shared/desktop/logo-footer.svg"
                 alt="Coffeeroaster Logo"
             />
             <ul>
@@ -464,19 +469,19 @@
             </ul>
             <div class="socials">
                 <img
-                    src="./assets/shared/desktop/icon-facebook.svg"
+                    src="../assets/shared/desktop/icon-facebook.svg"
                     alt="Coffeeroaster Facebook"
                 />
                 <img
-                    src="./assets/shared/desktop/icon-twitter.svg"
+                    src="../assets/shared/desktop/icon-twitter.svg"
                     alt="Coffeeroaster Twitter"
                 />
                 <img
-                    src="./assets/shared/desktop/icon-instagram.svg"
+                    src="../assets/shared/desktop/icon-instagram.svg"
                     alt="Coffeeroaster Instagram"
                 />
             </div>
         </footer>
-        <script src="./script.js"></script>
+        <script src="../script.js"></script>
     </body>
 </html>
