--- a/pages/home.html
+++ b/pages/home.html
@@ -10,19 +10,19 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <title>Coffee Roasters - Home</title>
+        <title>Coffeeroasters - Home</title>
         <link
             rel="icon"
             type="image/x-icon"
-            href="./assets/favicon.png"
+            href="../assets/favicon.png"
         />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
         <nav>
             <img
                 class="nav-logo"
-                src="./assets/shared/desktop/logo-header.svg"
+                src="../assets/shared/desktop/logo-header.svg"
                 alt="Coffeeroaster Logo"
             />
 
@@ -43,7 +43,7 @@
             <div class="hamburger" id="hamburger">
                 <img
                     id="hamburger-icon"
-                    src="./assets/shared/mobile/icon-hamburger.svg"
+                    src="../assets/shared/mobile/icon-hamburger.svg"
                     alt=""
                 />
             </div>
@@ -93,7 +93,7 @@
                     <div class="coffee">
                         <div class="product-image">
                             <img
-                                src="./assets/home/desktop/image-gran-espresso.png"
+                                src="../assets/home/desktop/image-gran-espresso.png"
                                 alt=""
                             />
                         </div>
@@ -109,7 +109,7 @@
                     <div class="coffee">
                         <div class="product-image">
                             <img
-                                src="./assets/home/desktop/image-planalto.png"
+                                src="../assets/home/desktop/image-planalto.png"
                                 alt=""
                             />
                         </div>
@@ -125,7 +125,7 @@
                     <div class="coffee">
                         <div class="product-image">
                             <img
-                                src="./assets/home/desktop/image-piccollo.png"
+                                src="../assets/home/desktop/image-piccollo.png"
                                 alt=""
                             />
                         </div>
@@ -141,7 +141,7 @@
                     <div class="coffee">
                         <div class="product-image">
                             <img
-                                src="./assets/home/desktop/image-danche.png"
+                                src="../assets/home/desktop/image-danche.png"
                                 alt=""
                             />
                         </div>
@@ -172,7 +172,7 @@
                     <div class="benefit">
                         <div class="benefit-icon">
                             <img
-                                src="./assets/home/desktop/icon-coffee-bean.svg"
+                                src="../assets/home/desktop/icon-coffee-bean.svg"
                                 alt=""
                             />
                         </div>
@@ -189,7 +189,7 @@
                     <div class="benefit">
                         <div class="benefit-icon">
                             <img
-                                src="./assets/home/desktop/icon-gift.svg"
+                                src="../assets/home/desktop/icon-gift.svg"
                                 alt=""
                             />
                         </div>
@@ -205,7 +205,7 @@
                     <div class="benefit">
                         <div class="benefit-icon">
                             <img
-                                src="./assets/home/desktop/icon-truck.svg"
+                                src="../assets/home/desktop/icon-truck.svg"
                                 alt=""
                             />
                         </div>
@@ -284,7 +284,7 @@
         <footer>
             <img
                 class="footer-logo"
-                src="./assets/shared/desktop/logo-footer.svg"
+                src="../assets/shared/desktop/logo-footer.svg"
                 alt="Coffeeroaster Logo"
             />
             <ul>
@@ -300,19 +300,19 @@
             </ul>
             <div class="socials">
                 <img
-                    src="./assets/shared/desktop/icon-facebook.svg"
+                    src="../assets/shared/desktop/icon-facebook.svg"
                     alt="Coffeeroaster Facebook"
                 />
                 <img
-                    src="./assets/shared/desktop/icon-twitter.svg"
+                    src="../assets/shared/desktop/icon-twitter.svg"
                     alt="Coffeeroaster Twitter"
                 />
                 <img
-                    src="./assets/shared/desktop/icon-instagram.svg"
+                    src="../assets/shared/desktop/icon-instagram.svg"
                     alt="Coffeeroaster Instagram"
                 />
             </div>
         </footer>
-        <script src="./hamburger-menu.js"></script>
+        <script src="../hamburger-menu.js"></script>
     </body>
 </html>
