Adjusting files folder

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,21 +14,23 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="../coffee/assets/favicon.png"
+            href="../assets/favicon.png"
         />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
             <nav>
+              <a href="../pages/home.html">
                 <img
                     class="nav-logo"
-                    src="./assets/shared/desktop/logo-header.svg"
+                    src="../assets/shared/desktop/logo-header.svg"
                     alt="Coffeeroaster Logo"
                 />
+              </a>
                 <div id="navigation">
                     <ul>
                         <li>
-                            <a href="./home.html"
+                            <a href="../pages/home.html"
                                 >HOME</a
                             >
                         </li>
@@ -36,7 +38,7 @@
                             ABOUT US
                         </li>
                         <li>
-                            <a href="./create.html"
+                            <a href="../pages/create.html"
                                 >CREATE YOUR PLAN</a
                             >
                         </li>
@@ -44,19 +46,19 @@
                 </div>
 
                 <div class="hamburger-menu">
-                    <img src="./assets/shared/mobile/icon-hamburger.svg" alt="">
+                    <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
                 </div>
             </nav>
             <div class="modal-menu hidden">
                 <ul>
                     <li>
-                        <a href="./home.html">Home</a>
+                        <a href="../pages/home.html">Home</a>
                     </li>
                     <li>
                         About Us
                     </li>
                     <li>
-                        <a href="./create.html"
+                        <a href="../pages/create.html"
                             >Create Your Plan</a
                         >
                     </li>
@@ -113,7 +115,7 @@
                     <h2>Our headquarters</h2>
                     <div class="countries">
                         <div class="country">
-                            <img class="illustration" src="./assets/about/desktop/illustration-uk.svg" alt="">
+                            <img class="illustration" src="../assets/about/desktop/illustration-uk.svg" alt="">
                             <h1>United Kingdom</h1>
                             <ul>
                                 <li>68 Asfordby Rd</li>
@@ -123,7 +125,7 @@
                             </ul>
                         </div>
                         <div class="country">
-                            <img class="illustration" src="./assets/about/desktop/illustration-canada.svg" alt="">
+                            <img class="illustration" src="../assets/about/desktop/illustration-canada.svg" alt="">
                             <h1>Canada</h1>
                             <ul>
                                 <li>1528 Eglinton Avenue</li>
@@ -133,7 +135,7 @@
                             </ul>
                         </div>
                         <div class="country">
-                            <img class="illustration" src="./assets/about/desktop/illustration-australia.svg" alt="">
+                            <img class="illustration" src="../assets/about/desktop/illustration-australia.svg" alt="">
                             <h1>Australia</h1>
                             <ul>
                                 <li>36 Swanston Street</li>
@@ -150,38 +152,38 @@
             <footer>
                 <img
                     class="footer-logo"
-                    src="./assets/shared/desktop/logo-footer.svg"
+                    src="../assets/shared/desktop/logo-footer.svg"
                     alt="Coffeeroaster Logo"
                 />
                 <ul>
                     <li>
-                        <a href="./home.html">HOME</a>
+                        <a href="../pages/home.html">HOME</a>
                     </li>
                     <li>
                         ABOUT US
                     </li>
                     <li>
-                        <a href="./create.html"
+                        <a href="../pages/create.html"
                             >CREATE YOUR PLAN</a
                         >
                     </li>
                 </ul>
                 <div class="socials">
                     <img
-                        src="./assets/shared/desktop/icon-facebook.svg"
+                        src="../assets/shared/desktop/icon-facebook.svg"
                         alt="Coffeeroaster Facebook"
                     />
                     <img
-                        src="./assets/shared/desktop/icon-twitter.svg"
+                        src="../assets/shared/desktop/icon-twitter.svg"
                         alt="Coffeeroaster Twitter"
                     />
                     <img
-                        src="./assets/shared/desktop/icon-instagram.svg"
+                        src="../assets/shared/desktop/icon-instagram.svg"
                         alt="Coffeeroaster Instagram"
                     />
                 </div>
             </footer>
         </main>
-        <script src="./hamburger-menu.js"></script>
+        <script src="../hamburger-menu.js"></script>
     </body>
 </html>
