--- a/pages/create.html
+++ b/pages/create.html
@@ -14,26 +14,28 @@
         <link
             rel="icon"
             type="image/x-icon"
-            href="../coffee/assets/favicon.png"
+            href="../assets/favicon.png"
         />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="../css/style.css" />
     </head>
     <body>
             <nav>
+              <a href="../pages/home.html">
                 <img
                     class="nav-logo"
-                    src="./assets/shared/desktop/logo-header.svg"
+                    src="../assets/shared/desktop/logo-header.svg"
                     alt="Coffeeroaster Logo"
                 />
+              </a>
                 <div id="navigation">
                     <ul>
                         <li>
-                            <a href="./home.html"
+                            <a href="../pages/home.html"
                                 >HOME</a
                             >
                         </li>
                         <li>
-                            <a href="./about.html"
+                            <a href="../pages/about.html"
                                 >ABOUT US</a
                             >
                         </li>
@@ -44,16 +46,16 @@
                 </div>
 
                 <div class="hamburger-menu">
-                    <img src="./assets/shared/mobile/icon-hamburger.svg" alt="">
+                    <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
                 </div>
             </nav>
             <div class="modal-menu hidden">
                 <ul>
                     <li>
-                        <a href="./home.html">Home</a>
+                        <a href="../pages/home.html">Home</a>
                     </li>
                     <li>
-                        <a href="./about.html">About Us</a>
+                        <a href="../pages/about.html">About Us</a>
                     </li>
                     <li>
                         Create Your Plan
@@ -161,7 +163,7 @@
                                     How do you drink your coffee?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                         
@@ -199,7 +201,7 @@
                                 What type of coffee?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -236,7 +238,7 @@
                                 How much would you like?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -273,7 +275,7 @@
                                 Want us to grind them?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -310,7 +312,7 @@
                                 How often should we deliver?
                                 </h1>
                                 <div class="arrow-wrap">
-                                    <img src="./assets/plan/desktop/icon-arrow.svg" alt="">
+                                    <img src="../assets/plan/desktop/icon-arrow.svg" alt="">
                                 </div>
                             </div>
                             <div class="answers">
@@ -387,15 +389,15 @@
             <footer>
                 <img
                     class="footer-logo"
-                    src="./assets/shared/desktop/logo-footer.svg"
+                    src="../assets/shared/desktop/logo-footer.svg"
                     alt="Coffeeroaster Logo"
                 />
                 <ul>
                     <li>
-                        <a href="./home.html">Home</a>
+                        <a href="../pages/home.html">Home</a>
                     </li>
                     <li>
-                        <a href="./about.html">About Us</a>
+                        <a href="../pages/about.html">About Us</a>
                     </li>
                     <li>
                         Create Your Plan
@@ -403,21 +405,21 @@
                 </ul>
                 <div class="socials">
                     <img
-                        src="./assets/shared/desktop/icon-facebook.svg"
+                        src="../assets/shared/desktop/icon-facebook.svg"
                         alt="Coffeeroaster Facebook"
                     />
                     <img
-                        src="./assets/shared/desktop/icon-twitter.svg"
+                        src="../assets/shared/desktop/icon-twitter.svg"
                         alt="Coffeeroaster Twitter"
                     />
                     <img
-                        src="./assets/shared/desktop/icon-instagram.svg"
+                        src="../assets/shared/desktop/icon-instagram.svg"
                         alt="Coffeeroaster Instagram"
                     />
                 </div>
             </footer>
         </main>
-        <script src="./hamburger-menu.js"></script>
-        <script src="./script.js"></script>
+        <script src="../hamburger-menu.js"></script>
+        <script src="../script.js"></script>
     </body>
 </html>
