--- a/pages/about.html
+++ b/pages/about.html
@@ -184,6 +184,6 @@
                 </div>
             </footer>
         </main>
-        <script src="../hamburger-menu.js"></script>
+        <script src="../scripts/hamburger-menu.js"></script>
     </body>
 </html>
