--- a/pages/create.html
+++ b/pages/create.html
@@ -419,7 +419,7 @@
                 </div>
             </footer>
         </main>
-        <script src="../hamburger-menu.js"></script>
-        <script src="../script.js"></script>
+        <script src="../scripts/hamburger-menu.js"></script>
+        <script src="../scripts/script.js"></script>
     </body>
 </html>
