--- a/pages/home.html
+++ b/pages/home.html
@@ -269,6 +269,6 @@
                 </div>
             </footer>
         </main>
-        <script src="../hamburger-menu.js"></script>
+        <script src="../scripts/hamburger-menu.js"></script>
     </body>
 </html>
